--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,11 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-secp256k1 = "0.20.3"
 sha2 = "0.9.8"
 hex-literal = "0.3.3"
 chrono = "0.4"
- 
+rand = "0.4.3"
+
+[dependencies.secp256k1]
+features = ["rand"]
+version = "0.12.0"
